objects/Additional_Domain__c.object
<CustomObject>
    <description>Used to hold additional domains for account email matching</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Additional_Domains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_convert_leads_into_account_contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto convert leads into account contacts</description>
        <label>Auto convert leads into account contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius And Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Office__c</fullName>
        <formula>CASE(Country__c,

&apos;United States&apos;, &apos;US&apos;,
&apos;Canada&apos;,&apos;US&apos;, 
&apos;Puerto Rico&apos;, &apos;US&apos;,
&apos;Trinidad and Tobago&apos;, &apos;US&apos;,

&apos;Japan&apos;, &quot;JP&quot;,

&apos;Australia&apos;,&apos;AU&apos;,
&apos;New Zealand&apos;,&apos;AU&apos;,
&apos;Fiji&apos;, &apos;AU&apos;,
&apos;Papua New Guinea&apos;, &apos;AU&apos;,

&apos;Argentina&apos;,&apos;LatAm&apos;,
&apos;Belize&apos;,&apos;LatAm&apos;,
&apos;Bolivia&apos;,&apos;LatAm&apos;,
&apos;Chile&apos;,&apos;LatAm&apos;,
&apos;Colombia&apos;,&apos;LatAm&apos;,
&apos;Costa Rica&apos;,&apos;LatAm&apos;,
&apos;Ecuador&apos;,&apos;LatAm&apos;,
&apos;El Salvador&apos;,&apos;LatAm&apos;,
&apos;French Guiana&apos;,&apos;LatAm&apos;,
&apos;Guatemala&apos;,&apos;LatAm&apos;,
&apos;Guyana&apos;,&apos;LatAm&apos;,
&apos;Honduras&apos;,&apos;LatAm&apos;,
&apos;Mexico&apos;,&apos;LatAm&apos;,
&apos;Nicaragua&apos;,&apos;LatAm&apos;,
&apos;Panama&apos;,&apos;LatAm&apos;,
&apos;Peru&apos;,&apos;LatAm&apos;,
&apos;Suriname&apos;,&apos;LatAm&apos;,
&apos;Uruguay&apos;,&apos;LatAm&apos;,
&apos;Venezuela&apos;,&apos;LatAm&apos;,

&apos;Austria&apos;,&apos;IRE&apos;,
&apos;Belgium&apos;,&apos;IRE&apos;,
&apos;Czech Republic&apos;,&apos;IRE&apos;,
&apos;Denmark&apos;,&apos;IRE&apos;,
&apos;Finland&apos;,&apos;IRE&apos;,
&apos;France&apos;,&apos;IRE&apos;,
&apos;Germany&apos;,&apos;IRE&apos;,
&apos;Great Britain&apos;,&apos;IRE&apos;,
&apos;Greece&apos;,&apos;IRE&apos;,
&apos;Iceland&apos;,&apos;IRE&apos;,
&apos;Ireland&apos;,&apos;IRE&apos;,
&apos;Israel&apos;,&apos;IRE&apos;,
&apos;Italy&apos;,&apos;IRE&apos;,
&apos;Kazakhstan&apos;,&apos;IRE&apos;,
&apos;Lithuania&apos;,&apos;IRE&apos;,
&apos;Luxembourg&apos;,&apos;IRE&apos;,
&apos;Netherlands&apos;,&apos;IRE&apos;,
&apos;Norway&apos;,&apos;IRE&apos;,
&apos;Poland&apos;,&apos;IRE&apos;,
&apos;Portugal&apos;,&apos;IRE&apos;,
&apos;Reunion&apos;,&apos;IRE&apos;,
&apos;Romania&apos;,&apos;IRE&apos;,
&apos;Russian Federation&apos;,&apos;IRE&apos;,
&apos;Slovakia&apos;,&apos;IRE&apos;,
&apos;Slovenia&apos;,&apos;IRE&apos;,
&apos;South Africa&apos;,&apos;IRE&apos;,
&apos;Spain&apos;,&apos;IRE&apos;,
&apos;Sweden&apos;,&apos;IRE&apos;,
&apos;Switzerland&apos;,&apos;IRE&apos;,
&apos;Turkey&apos;,&apos;IRE&apos;,
&apos;United Arab Emirates&apos;,&apos;IRE&apos;,
&apos;United Kingdom&apos;,&apos;IRE&apos;,
&apos;Vatican City State (Holy See)&apos;,&apos;IRE&apos;,

&apos;China&apos;,&apos;MY&apos;,
&apos;Hong Kong&apos;,&apos;MY&apos;,
&apos;India&apos;,&apos;MY&apos;,
&apos;Indonesia&apos;,&apos;MY&apos;,
&apos;Korea (South)&apos;,&apos;MY&apos;,
&apos;Malaysia&apos;,&apos;MY&apos;,
&apos;Philippines&apos;,&apos;MY&apos;,
&apos;Singapore&apos;,&apos;MY&apos;,
&apos;Sri Lanka&apos;,&apos;MY&apos;,
&apos;Taiwan&apos;,&apos;MY&apos;,
&apos;Thailand&apos;,&apos;MY&apos;,
&apos;Vietnam&apos;,&apos;MY&apos;,

&apos;UNK&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Office</label>
        <type>Text</type>
    </fields>
    <label>Domain</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>No_dot</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>.</value>
        </filters>
        <label>No dot</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Additional Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Domain_may_NOT_link_to_ORPHAN</fullName>
        <active>false</active>
        <description>Domain records may not be linked to the ORPHAN ACCOUNT record</description>
        <errorConditionFormula>Account__r.Name = &quot;DO NOT DELETE: ORPHAN ACCOUNT&quot;</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Domains may not be linked to the ORPHAN ACCOUNT record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>To_convert_Leads_to_Contact</fullName>
        <active>true</active>
        <description>This checkbox cannot be true unless the domain account is not null</description>
        <errorConditionFormula>IF( Account__c = null &amp;&amp;  Auto_convert_leads_into_account_contacts__c = true , true, false)</errorConditionFormula>
        <errorDisplayField>Auto_convert_leads_into_account_contacts__c</errorDisplayField>
        <errorMessage>CheckBox cannot be true unless the domain account is not null</errorMessage>
    </validationRules>
</CustomObject>